# uft-clifford-torsion

./: .gitattributes  .gitignore  1  AUTONOMOUS_RESEARCH_PLAN.md  CKM_FINAL_COMPREHENSIVE_REPORT.md  CKM_FIVE_DIRECTIONS_FINAL_REPORT.md  CKM_PHYSICAL_INTERPRETATION_COMPLETE.md  CKM_TORSION_ORIGIN_ANALYSIS.md  CKM_TORSION_ORIGIN_HONEST_ANALYSIS.md  CMakeLists.txt  CORRECTION_COMPLETE_REPORT.md  Conference_Presentation_Outline.md  DIRECTION2_OPTIMIZATION_COMPLETE.md  DIRECTION4_EXTENSIONS_REPORT.md  E-4_Tabletop_Reinterpretation_Dual.md  E-6_Reinterpretation_Dual.md  EMERGENT_FLEXIBILITY_FINAL_REPORT.md  EXTENSION_RESEARCH_PLAN.md  FINAL_COMPLETE_SUMMARY.md  FINAL_COMPLETION_REPORT.md  FINAL_PROJECT_COMPLETION_REPORT.md  FIRST_PRINCIPLES_THETA2_FINAL_REPORT.md  FIRST_PRINCIPLES_THETA2_REPORT.md  FLEXIBILITY_DESYNCHRONIZATION_REPORT.md  GITHUB_PUSH_COMPLETE.md  GITHUB_SUBMIT_GUIDE.md  LICENSE  LISA_Outreach_Email.txt  LISA_SCIENCE_CASE.md  MEMORY.md  MULTI_STRAND_ROPE_MODEL_REPORT.md  PHASE_AWARE_LOSS_README.md  PLY_ROPE_MODEL_REPORT.md  PMNS_ANALYSIS_REPORT.md  Popular_Science_Article.md  README.md  RESEARCH_COMPENDIUM.md  THEORY_CORRECTION_LOG.md  THETA2_DEEP_EXPLORATION_REPORT.md  TNN_EVOLUTION.md  (+42 more)
applications/: astrophysical_extensions.md  frb_energy_calculations.md  frb_periodicity_study.md  geophysics_spectral_flow.md
benchmarks/: benchmark_phase_loss.cpp
dance_clipper/: README.md  audio_analyzer.py  batch_clip.sh  config.yaml  dance_clipper.py  dance_presets.py  example.py  gpu_accelerator.py  requirements.txt  start_web.sh  test_installation.py  video_analyzer.py  web_app.py
dance_clipper/templates/: index.html
docker-installer/: Dockerfile  LICENSE  Makefile  README.md  SUMMARY.md  docker-compose.yml  install.sh  quickstart.sh
docker-installer/config/: openclaw.yaml
docs/: FINAL_COMPLETE_SUMMARY.md  MEMORY.md  blackhole_explanation_assessment.py  blackhole_inward_fractal_expansion.py  blackhole_simple_answer.py  clifford_algebra_relation.py  clifford_correction.py  clifford_signature_analysis.py  correction_spectral_vs_topological.py  force_directions_gut_scale.py  gr_integration_verification.py  inverse_spectral_analysis.py  quantum_geometrization_program.md  revision_summary.py  rotating_sphere_energy_flow.py  skeptic_response_handbook.md  tau_zero_revision_summary.py  tau_zero_unification_report.py  three_problems_assessment.md  two_questions_unified.py  uft_core_structure_unification.py  uft_explanatory_power.py
docs/math/: string_torsion_correspondence_framework.md
docs/publications/: tnn_computational_validation_zhihu.md  zhihu_article_final.md
docs/theory/: 7x24_execution_log.md  95_PERCENT_ACHIEVED.md  99_PERCENT_ACHIEVED.md  JWST_validation_output.txt  SUBMISSION_READY.md  auto_progress_report.md  blackhole_numerical.py  chapter2_reconstructed.md  cmb_nongaussianity_results.json  cmb_nongaussianity_validation.py  cmb_validation_output.txt  complete_theory_research_log.md  complete_theory_roadmap.md  core_concept_correction.md  cosmology_simulation.py  dark_matter_abundance.py  (+39 more)
kernels/: phase_loss_kernels.cu  v7_brain_kernels.cu
math_derivations/: torsion_gauge_correspondence.md
memory/: 2026-03-10.md  2026-03-11.md  2026-03-13-part2.md  2026-03-13-part3.md  2026-03-13-part4.md  2026-03-13-part5.md  2026-03-13-part6.md  2026-03-13-part7.md  2026-03-13.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md
paper/: Cover_Letter.tex  PAPER_OUTLINE.md  PAPER_STRUCTURE.md  README_LATEX.md  Supplementary_Materials.tex  TEMPORAL_GEOMETRY_ADDITION_PLAN.md  abstract.tex  arxiv_metadata.txt  arxiv_metadata_main.txt  arxiv_submission_info.txt  ctuft_arxiv.aux  ctuft_arxiv.out  ctuft_arxiv.tex  email_template_dai_zigao.txt  email_template_li_di.txt  figures.tex  fix_fig3.py  fix_unicode.sh  generate_figures.py  github_release_info.txt  main.aux  main.out  main.tex  main.toc  main_paper.tex  main_zh.aux  main_zh.out  main_zh.tex  main_zh.toc  main_zh_article.aux  main_zh_article.out  main_zh_article.tex  main_zh_article.toc  main_zh_content.aux  main_zh_content.out  main_zh_content.tex  main_zh_content.toc  main_zh_final.aux  main_zh_final.out  main_zh_final.tex  (+19 more)
paper_extended/: IMPROVEMENT_PLAN.md  rotating_sphere_full.aux  rotating_sphere_full.out  rotating_sphere_full.tex  rotating_sphere_full.toc
paper_extended_cn/: README.md  README_CN.md  chinese_full_content.md  chinese_version.tex  rotating_sphere_cn.tex  rotating_sphere_full_cn.tex
paper_math_rigor/: README.md  main.aux  main.tex  main.toc  main_chinese.aux  main_chinese.out  main_chinese.tex  main_chinese.toc
paper_prl/: rotating_sphere_torsion.aux  rotating_sphere_torsion.blg  rotating_sphere_torsion.out  rotating_sphere_torsion.tex
papers/: reciprocal_internal_space_ckm.md  reciprocal_internal_space_technical.md
research_logs/: 2026-03-12.md
research_notes/: 7x24_execution_plan.md  98_PERCENT_ACHIEVED.md  AUTONOMOUS_RESEARCH_PLAN.md  COMPLETE_RESEARCH_SUMMARY.md  FINAL_7x24_REPORT.md  FINAL_REPORT.md  JWST_redshift_validation.py  JWST_validation_results.json  PHASE3_CONTINUATION_REPORT.md  PHASE3_CONTINUATION_REPORT_2026-03-20.md  PHASE3_FINAL_REPORT_2026-03-18.md  PHASE3_FINAL_SUMMARY.md  README.md  REFINEMENT_COMPLETE.md  TNN_Developmental_Roadmap.md  TNN_RESEARCH_SUMMARY_2026-03-19.md  UFT_mathematical_rigorization_research_plan.md  UFT_research_progress_check_2026-03-24.md  UFT_research_progress_tracker.md  accelerated_progress_report.md  black_hole_entropy_phase_C_launch.md  black_hole_information_theory.md  collider_constraints.md  compact_object_verification.py  compatibility_verification.py  complementary_energy_analysis.py  completion_report_final.md  core_mechanisms_integration.md  cosmic_time_exploration.py  cover_letter.txt  ctuft_black_hole_entropy_chapter.md  dark_energy_mechanism.py  day1_summary.md  day2_coupling_running.py  day3_early_universe.py  dual_space_oscillation.py  early_universe_phase_transition.md  experiment_log.txt  final_quality_check.md  final_review_report.md  (+74 more)
tests/: test_phase_aware_loss.cpp  v7_brain_test.cpp
tnn_ecosystem/: README.md
(+503 files in other folders)
